--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
     margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+.container {
+    display: flex;
+    /* margin-top: 10px; */
+}
+
+.others {
+    flex: 4;
+    background-color: darkcyan;
 }
