make the code DRY

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,3 +6,9 @@
     display: flex;
     margin: 20px;
 }
+
+.featured {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
